--- a/client/base.html
+++ b/client/base.html
@@ -1,4 +1,5 @@
 <template name="appHome">
+{{> appHeaderWhite}}
    <div class="applicationHome">
                <header>
                   <form style="opacity: 1; -webkit-transform: translate3d(0px, -50%, 0px);">
@@ -28,6 +29,8 @@
                   </ol>
                </section>
             </div> <!-- /applicationHome -->
+}
+}
 </template>
 
 <template name="packageListItem">
