--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <link rel="stylesheet" href="/css.css">
+      <link rel="stylesheet" href="/sidsStyles.css">
       <title> VITevents </title>
    </head>
 
@@ -9,9 +10,6 @@
    <body>
    	<div class="applicationLayout">
    		<div class="content">
-   			
-
-            {{> appHeaderWhite}}
 
             {{> yield}}
 
